# matching-engine

./: .gitignore  Cargo.toml  README.md
engine/: Cargo.toml  build.rs
engine/benches/: order_book.rs
engine/proto/: engine.proto
engine/src/: algos.rs  client.rs  client_order_manager.rs  lib.rs  rpc.rs  server.rs
engine/src/algos/: art_book.rs  book.rs  fifo.rs  optimised_fifo.rs
engine/src/rpc/: me_state_machine.rs  rpc_server.rs
engine/tests/: mod.rs  sync_channel.rs  watch.rs
raft/: Cargo.toml  build.rs
raft/examples/: failover_latency_evaluation.rs
raft/proto/: raft.proto
raft/src/: config.rs  lib.rs  network.rs  protobuf.rs  raft.rs  rpc_server.rs  shutdown.rs  state_machine.rs  storage.rs
raft/tests/: mod.rs  tonic.rs
raft/tests/raft/: mod.rs  raft.rs  single_node_can_fail_with_cluster_of_three.rs  start_command_works.rs
raft/tests/raft/common/: mod.rs
