[package]
name = "raft"
version = "0.1.0"
authors = ["Gellért Peresztegi-Nagy <gp454@cam.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tokio = { version = "0.2.22", features = ["full"] }
tonic = "0.3.1"
rand = "0.7.3"
tracing = "0.1.22"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.4"
futures = "0.3.8"
itertools = "0.9.0"
async-trait = "0.1.42"

[build-dependencies]
tonic-build = "0.3.1"


[[example]]
name = "failover"
path = "examples/failover_latency_evaluation.rs"
